Fix issue with title.

--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>Academic Website - Johan Öfverstedt
+<title>Academic Website - Johan Öfverstedt</title>
 </head>
 <body>
 To be filled with content.
