Add link to google scholar and cv.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,10 @@
 <title>Academic Website - Johan Öfverstedt</title>
 </head>
 <body>
-To be filled with content.
+
+<a href="https://scholar.google.se/citations?hl=en&user=GMminVMAAAAJ">Google Scholar</a><br>
+<a href="https://docs.google.com/document/d/e/2PACX-1vQ54tZ7kBfBPVGBequuKac9Y031xUYjf-iFYR3J_KTqznJvjlov50d-LKr2fPgzTzqbPZ3eK0Pmd8pG/pub">CV (on google drive)</a>
+
+
 </body>
 </html>
