--- a/index.html
+++ b/index.html
@@ -4,9 +4,14 @@
 </head>
 <body>
 
+<img src='evergreen.png' alt='Photo of Johan Öfverstedt'> <br>
+Links:
 <a href="https://scholar.google.se/citations?hl=en&user=GMminVMAAAAJ">Google Scholar</a><br>
-<a href="https://docs.google.com/document/d/e/2PACX-1vQ54tZ7kBfBPVGBequuKac9Y031xUYjf-iFYR3J_KTqznJvjlov50d-LKr2fPgzTzqbPZ3eK0Pmd8pG/pub">CV (on google drive)</a>
+<a href="https://docs.google.com/document/d/e/2PACX-1vQ54tZ7kBfBPVGBequuKac9Y031xUYjf-iFYR3J_KTqznJvjlov50d-LKr2fPgzTzqbPZ3eK0Pmd8pG/pub">CV (on google drive)</a><br>
+  
+I am a postdoctoral researcher in the PET/MR research group headed by Professor Joel Kullberg and Professor Håkan Ahlström where I am researching topics related to medical image registration and deep image regression.
 
+My PhD research was in method development for efficient fusion of intensity and spatial information, distance/similarity measures between sets/images, image registration, and machine learning methods.
 
 </body>
 </html>
